--- a/dashboard.html
+++ b/dashboard.html
@@ -36,7 +36,7 @@
                 <div class="temperature" id="temp" style="font-size: 2rem;"></div>
                 <div class="row center">
                     <img src="" id="icon">
-                    <span  class="temperatureDesc" id="temperatureDesc"></span>
+                    <span class="temperatureDesc" id="temperatureDesc"></span>
                 </div>
                 <div class="windSpeed" id="windSpeed"></div>
                 <div class="skydesc" id="skyDescription"></div>
@@ -47,16 +47,20 @@
         <iframe class="card" id="myImg" class="myImg"> </iframe>
     </section>
     <section class="task" style="padding-bottom: 5rem;">
-        <button class="btnadd">📃</button>
+        <button class="btnadd"><a style="color: #000; text-decoration: none;" href="./taskadd.html">ADD TASK 📃</a></button>
         <div>
             <div style="padding: 1rem 0px;">
                 <h2>Panding Task</h2><br>
-                <div class="row" id="tablepanding"> </div>
+                <div class="row" id="tablepanding">
+                    <div class="container"> Add new task </div>
+                </div>
                 <!--<table class="table" style="overflow-x:auto;"></table>-->
             </div>
             <div style="padding: 1rem 0rem;">
                 <h2>Complited Task</h2><br>
-                <div class="row" id="tablecomplit"> </div>
+                <div class="row" id="tablecomplit"> 
+                    <div class="container"> Add new task </div>
+                </div>
                 <!--<table class="table" id="tablecomplit" style="overflow-x:auto;"></table>-->
             </div>
         </div>
